welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:14: error: '<-' expected but 'for' found.
for (i for 1<- 4 ){
       ^MethodsDogHouse:52: error: illegal start of simple expression
}
^